--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,16 @@
+@use './shared.scss';
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 * {
   margin: 0;
+  padding: 0;
   font-family: "Roboto", sans-serif;
+  color: shared.$textColor;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: shared.$colorBg2;
+  line-height: 1.6;
+  letter-spacing: 0.06rem;;
 }
