--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -12,12 +12,6 @@
     flex-direction: column;
     gap: 0.4rem;
 
-    .name {
-      text-align: center;
-      font-size: 1.8rem;
-      letter-spacing: 0.12rem;
-    }
-
     .skillsContainer {
       display: flex;
       flex-direction: column;
@@ -37,7 +31,7 @@
         justify-content: center;
         padding: 1rem;
         background-color: shared.$colorBg2;
-        border-radius: 0.8rem;
+        border-radius: shared.$borderRadius;
         line-height: 0.6;
         box-shadow: shared.$shadowInset;
 
@@ -61,7 +55,7 @@
       text-decoration: none;
       background-color: shared.$colorBg3;
       min-height: 2.8rem;
-      border-radius: 0.8rem;
+      border-radius: shared.$borderRadius;
       letter-spacing: 0.08rem;
       box-shadow: shared.$shadow;
       font-size: 1.2rem;
