--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -1,9 +1,11 @@
 $colorBg1: rgb(45, 45, 45);
 $colorBg2: rgb(52, 52, 52);
-$colorBg3: rgb(37, 37, 37);
+$colorBg3: rgb(39, 39, 39);
 
 $textColor: white;
 $textColorSecondary: rgb(180, 180, 180);
 
-$shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.6); 
-$shadowInset: inset 2px 2px 5px 0px rgba(0, 0, 0, 0.6); 
+$shadow: 2px 2px 7px 0px rgba(0, 0, 0, 0.6); 
+$shadowInset: inset 2px 2px 7px 0px rgba(0, 0, 0, 0.6); 
+
+$borderRadius: 0.8rem;
