--- a/src/styles/Project.scss
+++ b/src/styles/Project.scss
@@ -16,47 +16,59 @@
     width: 100%;
     box-shadow: shared.$shadowInset;
     border-radius: shared.$borderRadius;
-   }
+    pointer-events: none;
+  }
 
-  img {
-    border-top-left-radius: shared.$borderRadius;
-    border-top-right-radius: shared.$borderRadius;
-    box-shadow: shared.$borderRadius;
-    width: 100%;
-    object-fit: cover;
+  .img {
+    margin-bottom: -8px;
+    
+    img {
+      border-top-left-radius: shared.$borderRadius;
+      border-top-right-radius: shared.$borderRadius;
+      box-shadow: shared.$borderRadius;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 
   .info {
     display: flex;
     flex-direction: column;
     gap: 0.8rem;
-    padding: 0.8rem 1rem;
+    padding: 1.4rem 1.5rem;
 
     .title {
       color: shared.$textColor;
     }
 
-    .technologiesUsed {
+    .moreInfo {
       display: flex;
-      gap: 0.8rem;
-      flex-wrap: wrap;
-      justify-content: center;
+      justify-content: space-between;
 
-      img {
-        height: 2.2rem;
-        width: 2.2rem;
+      .technologiesUsed {
+        display: flex;
+        gap: 0.8rem;
+        flex-wrap: wrap;
+        justify-content: center;
+  
+        img {
+          height: 2.2rem;
+          width: 2.2rem;
+        }
+      }
+  
+      .links {
+        display: flex;
+        gap: 0.8rem;
+        justify-content: flex-end;
+  
+        & > * {
+          height: 2.2rem;
+          width: 2.2rem;
+        }
       }
     }
 
-    .links {
-      display: flex;
-      gap: 0.8rem;
-      justify-content: flex-end;
-
-      & > * {
-        height: 1.8rem;
-        width: 1.8rem;
-      }
-    }
   }
 }
