--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -1,6 +1,12 @@
 .Projects {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   padding: 2rem 1.6rem;
+
+  .projectList {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
 }
