--- a/src/styles/Project.scss
+++ b/src/styles/Project.scss
@@ -36,7 +36,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.8rem;
-    padding: 1.4rem 1.5rem;
+    padding: 1.3rem;
 
     .title {
       color: shared.$textColor;
