--- a/src/styles/Project.scss
+++ b/src/styles/Project.scss
@@ -36,7 +36,9 @@
     display: flex;
     flex-direction: column;
     gap: 0.8rem;
-    padding: 1.3rem;
+    padding-top: 0.6rem;
+    padding-bottom: 1.3rem;
+    padding-inline: 1.3rem;
 
     .title {
       color: shared.$textColor;
