--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -7,10 +7,37 @@
   // min-height: 100vh;
   padding: 2rem 1.6rem;
 
-  .info {
+  .info1 {
     display: flex;
     flex-direction: column;
     gap: 0.4rem;
+
+    .link, .email {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-decoration: none;
+      gap: 0.2rem;
+      color: shared.$textColorSecondary;
+      // background-color: shared.$colorBg3;
+      // min-height: 2.8rem;
+      // border-radius: shared.$borderRadius;
+      // letter-spacing: 0.08rem;
+      // box-shadow: shared.$shadow;
+      // font-size: 1.2rem;
+
+      .popupIcon {
+        height: 1rem;
+        width: 1rem;
+        stroke: shared.$textColorSecondary;
+      }
+    }
+  }
+
+  .info2 {
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
 
     .skillsContainer {
       display: flex;
@@ -18,7 +45,7 @@
       gap: 0.1rem;
 
       .title {
-        color: shared.$textColorSecondary;
+        color: shared.$textColor;
         text-align: center;
         font-size: 1.6rem;
         font-weight: normal;
@@ -40,25 +67,6 @@
           width: 2.2rem;
         }
       }
-    }
-  }
-
-  .links {
-    display: flex;
-    flex-direction: column;
-    gap: 0.7rem;
-
-    a {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-decoration: none;
-      background-color: shared.$colorBg3;
-      min-height: 2.8rem;
-      border-radius: shared.$borderRadius;
-      letter-spacing: 0.08rem;
-      box-shadow: shared.$shadow;
-      font-size: 1.2rem;
     }
   }
 }
