--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -5,7 +5,10 @@ $colorBg3: rgb(39, 39, 39);
 $textColor: white;
 $textColorSecondary: rgb(184, 184, 184);
 
-$shadow: 2px 2px 7px 0px rgba(0, 0, 0, 0.6); 
-$shadowInset: inset 2px 2px 7px 0px rgba(0, 0, 0, 0.6); 
+$shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.55); 
+$shadowInset: inset 4px 4px 8px 0px rgba(0, 0, 0, 0.55); 
 
 $borderRadius: 0rem;
+
+$breakpoint1: 660px;
+$breakpoint2: 880px;
