--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -37,12 +37,14 @@
   .info2 {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 0.7rem;
 
     .skillsContainer {
       display: flex;
       flex-direction: column;
       gap: 0.1rem;
+      max-width: 35rem;
 
       .title {
         color: shared.$textColor;
@@ -67,6 +69,19 @@
           width: 2.2rem;
         }
       }
+    }
+  }
+}
+
+@media (min-width: shared.$breakpoint2) {
+  .About {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 2rem 3rem;
+
+    & > * {
+      width: 100%;
+      justify-content: center;
     }
   }
 }
