Improve alignment of technologies used in project

--- a/src/styles/Project.scss
+++ b/src/styles/Project.scss
@@ -140,7 +140,7 @@
           flex-wrap: wrap;
           flex-grow: 1;
           gap: 1rem;
-          padding-block: 2rem;
+          padding-bottom: 2rem;
 
           img {
             height: 3.4rem;
