--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -1,12 +1,13 @@
-$colorBg1: rgb(45, 45, 45);
-$colorBg2: rgb(52, 52, 52);
-$colorBg3: rgb(39, 39, 39);
+$colorBg1: #041c32;
+$colorBg2: #04293a;
+$colorBg3: #064663;
 
-$textColor: white;
-$textColorSecondary: rgb(184, 184, 184);
+$textColor: black;
+$textColor2: white;
+$textColor3: rgb(151, 151, 151);
 
-$shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.55); 
-$shadowInset: inset 4px 4px 8px 0px rgba(0, 0, 0, 0.55); 
+$shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.55);
+$shadowInset: inset 4px 4px 8px 0px rgba(0, 0, 0, 0.55);
 
 $borderRadius: 0rem;
 
