--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -1,87 +1,72 @@
-@use './shared.scss';
+@use "./shared.scss";
 
 .About {
+  background-color: shared.$colorBg1;
+  min-height: 100vh;
+  position: relative;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  gap: 2rem;
-  // min-height: 100vh;
-  padding: 2rem 1.6rem;
 
-  .info1 {
-    display: flex;
-    flex-direction: column;
-    gap: 0.4rem;
+  a {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: shared.$textColor2;
+    text-decoration: none;
+    padding: 0.7rem;
+    font-size: 1.1rem;
 
-    .link, .email {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-decoration: none;
-      gap: 0.2rem;
-      color: shared.$textColorSecondary;
-      // background-color: shared.$colorBg3;
-      // min-height: 2.8rem;
-      // border-radius: shared.$borderRadius;
-      // letter-spacing: 0.08rem;
-      // box-shadow: shared.$shadow;
-      // font-size: 1.2rem;
-
-      .popupIcon {
-        height: 1rem;
-        width: 1rem;
-        stroke: shared.$textColorSecondary;
+    &:hover {
+      &::after {
+        width: 100%;
       }
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      border-bottom: 2px solid shared.$textColor2;
+      height: 2px;
+      width: 0%;
+      right: 0;
+      bottom: 0;
+      transition: width 0.2s ease-in-out;
     }
   }
 
-  .info2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.7rem;
-
-    .skillsContainer {
-      display: flex;
-      flex-direction: column;
-      gap: 0.1rem;
-      max-width: 35rem;
-
-      .title {
-        color: shared.$textColor;
-        text-align: center;
-        font-size: 1.6rem;
-        font-weight: normal;
-      }
-
-      .skills {
-        display: flex;
-        gap: 1rem;
-        flex-wrap: wrap;
-        justify-content: center;
-        padding: 1rem;
-        background-color: shared.$colorBg2;
-        border-radius: shared.$borderRadius;
-        line-height: 0.6;
-        box-shadow: shared.$shadowInset;
-
-        img {
-          height: 2.2rem;
-          width: 2.2rem;
-        }
-      }
-    }
+  h1 {
+    font-weight: bold;
+    letter-spacing: 0.14rem;
+    font-size: 2rem;
+    color: shared.$textColor2;
   }
-}
 
-@media (min-width: shared.$breakpoint2) {
-  .About {
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 2rem 3rem;
+  h2 {
+    font-weight: normal;
+    font-size: 1.4rem;
+    color: shared.$textColor3;
+  }
 
-    & > * {
-      width: 100%;
-      justify-content: center;
+  .custom-shape-divider-bottom-1665589859 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+
+    & svg {
+      position: relative;
+      display: block;
+      width: calc(100% + 1.3px);
+      height: 36px;
+    }
+
+    & .shape-fill {
+      fill: shared.$colorBg2;
     }
   }
 }
