--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -1,20 +1,7 @@
-@use './shared.scss';
-
+  @use './shared.scss';
+  
 .Projects {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 2rem 1.6rem;
-
-  .projectList {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-  }
-}
-
-@media (min-width: shared.$breakpoint2) {
-  .Projects {
-    padding: 2rem 3rem;
-  }
+  background-color: shared.$colorBg2;
+  min-height: 100vh;
+ 
 }
