--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -9,6 +9,12 @@
   align-items: center;
   flex-direction: column;
 
+  h1,
+  h2 {
+    // outline: 1px solid red;
+    width: 14rem;
+  }
+
   a {
     position: absolute;
     top: 0;
