--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -6,12 +6,57 @@
   align-items: center;
   flex-direction: column;
   gap: 2rem;
-  padding-block: 2.4rem;
+  padding-block: 4.4rem;
   padding-inline: 0.6rem;
+  position: relative;
 
   .projectList {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+  }
+
+  .divider {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+    background-color: shared.$colorBg1;
+
+    & svg {
+      position: relative;
+      display: block;
+      width: calc(100% + 1.3px);
+      height: 36px;
+    }
+
+    & .shape-fill {
+      fill: shared.$colorBg2;
+    }
+  }
+
+  .divider2 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    background-color: shared.$colorBg1;
+
+    & svg {
+      position: relative;
+      display: block;
+      width: calc(168% + 1.3px);
+      height: 36px;
+      transform: rotateY(180deg);
+    }
+
+    & .shape-fill {
+      fill: shared.$colorBg2;
+    }
   }
 }
