--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -9,6 +9,7 @@
   padding-block: 4.4rem;
   padding-inline: 0.6rem;
   position: relative;
+  margin-block: -(shared.$dividerHeight);
 
   .projectList {
     display: flex;
@@ -30,7 +31,7 @@
       position: relative;
       display: block;
       width: calc(100% + 1.3px);
-      height: 36px;
+      height: shared.$dividerHeight;
     }
 
     & .shape-fill {
@@ -51,7 +52,7 @@
       position: relative;
       display: block;
       width: calc(168% + 1.3px);
-      height: 36px;
+      height: shared.$dividerHeight;
       transform: rotateY(180deg);
     }
 
