--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -5,7 +5,28 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-  padding-top: 4.4rem;
-  padding-bottom: calc(4.4rem - shared.$dividerHeight);
+  padding-block: 2rem;
+  padding-bottom: 4rem;
   background-color: shared.$colorBg1;
+
+  .info {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    p {
+      font-size: 1rem;
+    }
+  }
+}
+
+@media (min-width: shared.$breakpoint1) {
+  .Contact {
+    .info {
+      p {
+        font-size: 1.2rem;
+      }
+    }
+  }
 }
