--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -6,10 +6,10 @@
   align-items: center;
   flex-direction: column;
   gap: 2rem;
-  padding-block: 4.4rem;
+  padding-block: calc(2rem + var(--dividerHeight));
   padding-inline: 0.6rem;
   position: relative;
-  margin-block: -(shared.$dividerHeight);
+  margin-block: -(var(--dividerHeight));
 
   .projectList {
     display: flex;
@@ -31,7 +31,7 @@
       position: relative;
       display: block;
       width: calc(100% + 1.3px);
-      height: shared.$dividerHeight;
+      height: var(--dividerHeight);
     }
 
     & .shape-fill {
@@ -52,12 +52,20 @@
       position: relative;
       display: block;
       width: calc(168% + 1.3px);
-      height: shared.$dividerHeight;
+      height: var(--dividerHeight);
       transform: rotateY(180deg);
     }
 
     & .shape-fill {
       fill: shared.$colorBg2;
+    }
+  }
+}
+
+@media (min-width: shared.$breakpoint1) {
+  .Projects {
+    .projectList {
+      gap: 2.4rem;
     }
   }
 }
