--- a/src/styles/Project.scss
+++ b/src/styles/Project.scss
@@ -3,7 +3,6 @@
 .Project {
   display: flex;
   flex-direction: column;
-  align-items: center;
   background-color: shared.$colorBg1;
   border-radius: shared.$borderRadius;
   width: 100%;
@@ -21,11 +20,12 @@
   }
 
   img {
-    height: 100%;
     width: 100%;
+    height: 100%;
     object-fit: cover;
     border-top-left-radius: shared.$borderRadius;
     border-top-right-radius: shared.$borderRadius;
+    // display: none;
   }
 
   .info {
@@ -42,6 +42,7 @@
     .bottomWrapper {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       padding-inline: 0.8rem;
 
       .left,
@@ -49,19 +50,111 @@
         display: flex;
         gap: 0.6rem;
 
-        i {
-          font-size: 2rem;
-        }
-      }
-
-      .right {
         a {
           text-decoration: none;
+        }
+
+        i {
+          font-size: 2rem;
         }
 
         svg {
           height: 2rem;
           width: 2rem;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: shared.$breakpoint1) {
+  .Project {
+    .info {
+      padding-block: 1rem;
+      gap: 1rem;
+
+      .bottomWrapper {
+        padding-inline: 1rem;
+
+        .left,
+        .right {
+          gap: 1.2rem;
+
+          i {
+            font-size: 2.6rem;
+          }
+
+          svg {
+            height: 2.6rem;
+            width: 2.6rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: shared.$breakpoint2) {
+  .Project {
+    flex-direction: row;
+
+    img {
+      width: 60%;
+      border-top-right-radius: 0;
+      border-bottom-left-radius: shared.$borderRadius;
+    }
+
+    .info {
+      width: 40%;
+      justify-content: center;
+
+      .title {
+        display: flex;
+        flex-grow: 1;
+        justify-content: center;
+        align-items: center;
+        padding-inline: 1.2rem;
+      }
+
+      .bottomWrapper {
+        // padding: 1rem;
+
+        .left,
+        .right {
+          gap: 0.8rem;
+
+          i {
+            font-size: 2.2rem;
+          }
+
+          svg {
+            height: 2.2rem;
+            width: 2.2rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: shared.$breakpoint3) {
+  .Project {
+    max-width: shared.$breakpoint3;
+
+    .info {
+      .bottomWrapper {
+        .left,
+        .right {
+          gap: 1rem;
+
+          i {
+            font-size: 2.6rem;
+          }
+
+          svg {
+            height: 2.6rem;
+            width: 2.6rem;
+          }
         }
       }
     }
