Add animation and tweak some styles

--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -69,3 +69,10 @@
     }
   }
 }
+
+@media (min-width: shared.$breakpoint2) {
+  .Projects {
+    gap: 3rem;
+    padding-block: calc(3rem + var(--dividerHeight));
+  }
+}
