Add hover effects on project links

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,9 +1,9 @@
-@use './shared.scss';
+@use "./shared.scss";
 
-.App {
-  // display: flex;
-  // flex-direction: column;
-  // background-color: shared.$colorBg1;
-  // max-width: shared.$breakpoint2;
-  // box-shadow: shared.$shadow;
-}
+// .App {
+//   display: flex;
+//   flex-direction: column;
+//   background-color: shared.$colorBg1;
+//   max-width: shared.$breakpoint2;
+//   box-shadow: shared.$shadow;
+// }
