--- a/src/styles/Project.scss
+++ b/src/styles/Project.scss
@@ -61,6 +61,20 @@
           height: 2rem;
           width: 2rem;
         }
+
+        & > * {
+          padding: 2px;
+        }
+      }
+
+      .right {
+        & > * {
+          border-radius: shared.$borderRadius;
+          transition: background-color 0.2s ease-in-out;
+          &:hover {
+            background-color: shared.$colorBg2;
+          }
+        }
       }
     }
   }
@@ -86,6 +100,10 @@
           svg {
             height: 2.6rem;
             width: 2.6rem;
+          }
+
+          & > * {
+            padding: 4px;
           }
         }
       }
