--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,9 +1,5 @@
 @use "./shared.scss";
 
-// .App {
-//   display: flex;
-//   flex-direction: column;
-//   background-color: shared.$colorBg1;
-//   max-width: shared.$breakpoint2;
-//   box-shadow: shared.$shadow;
-// }
+.App {
+  overflow-x: hidden;
+}
