--- a/src/styles/Project.scss
+++ b/src/styles/Project.scss
@@ -21,7 +21,6 @@
 
   img {
     width: 100%;
-    height: 100%;
     object-fit: cover;
     border-top-left-radius: shared.$borderRadius;
     border-top-right-radius: shared.$borderRadius;
@@ -36,18 +35,23 @@
 
     .title {
       text-align: center;
+      padding-inline: 0.2rem;
     }
 
     .bottomWrapper {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      gap: 0.4rem;
       padding-inline: 0.8rem;
+      flex-wrap: wrap;
 
       .left,
       .right {
         display: flex;
+        align-items: center;
         gap: 0.2rem;
+        flex-wrap: wrap;
 
         a {
           text-decoration: none;
