--- a/src/styles/Project.scss
+++ b/src/styles/Project.scss
@@ -157,10 +157,12 @@
 
     .info {
       width: 40%;
-      justify-content: center;
+      display: grid;
+      grid-template-rows: 1fr 3fr 1fr;
 
       .title {
-        margin-top: 3.4rem;
+        grid-row-start: 2;
+        grid-row-end: 3;
         display: flex;
         flex-grow: 1;
         justify-content: center;
@@ -169,6 +171,10 @@
       }
 
       .bottomWrapper {
+        grid-row-start: 3;
+        grid-row-end: 4;
+        align-items: flex-end;
+
         .left,
         .right {
           gap: 0.4rem;
